@@ -26,12 +26,13 @@ _$*
 *.ln
 core
 # CVS default ignores end
-# $Id: .cvsignore,v 1.2 2006/01/24 14:16:21 reho Exp $
+# $Id: .cvsignore,v 1.3 2008/07/01 17:10:36 reho Exp $
 
 Makefile
 Makefile.in
 README
 aclocal.m4
+amavisd-milter.spec
 amavisd-milter-*.tar.gz
 autoconf.sh
 autom4te.cache
